<resources>
    <string name="app_name">Lyra Note</string>
    <string name="action_settings">Settings</string>
    <string name="author_label">Author</string>
    <string name="year_label">Year</string>
    <string name="chancel_button_label">Chancel</string>
    <string name="save_button_label">Save</string>
    <string name="text_hint">Text</string>
    <string name="title_hint">Title</string>
    <string name="author_hint">Author</string>
    <string name="poem_editor">Edit Poem</string>
    <string name="language_german">German</string>
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_italian">Italian</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_russian">Russian</string>
    <string name="poem_view">Poem:</string>
    <string name="empty_view_title_text">No Poems in your App!</string>
    <string name="empty_view_subtitle_text">Add new poems using the button below!</string>

    //OCR Strings
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>

    <string-array name="languages">
        <item name="de">@string/language_german</item>
        <item name="en">@string/language_english</item>
        <item name="fr">@string/language_french</item>
        <item name="it">@string/language_italian</item>
        <item name="es">@string/language_spanish</item>
        <item name="ru">@string/language_russian</item>
    </string-array>

    <string name="samplePoem">
        "Jena vor uns im lieblichen Tale"
schrieb meine Mutter von einer Tour
auf einer Karte vom Ufer der Saale,
sie war in Kösen im Sommer zur Kur;
nun längst vergessen, erloschen die Ahne,
selbst ihre Handschrift, Graphologie,
Jahre des Werdens, Jahre der Wahne,
nur diese Worte vergesse ich nie.

Es war kein berühmtes Bild, keine Klasse,
für lieblich sah man wenig blühn,
schlechtes Papier, keine holzfreie Masse,
auch waren die Berge nicht rebengrün,
doch kam man vom Lande, von kleinen Hütten,
so waren die Täler wohl lieblich und schön,
man brauchte nicht Farbdruck, man brauchte nicht Bütten,
man glaubte, auch andere würden es sehn.

Es war wohl ein Wort von hoher Warte,
ein Ausruf hatte die Hand geführt,
sie bat den Kellner um eine Karte,
so hatte die Landschaft sie berührt,
und doch – wie oben – erlosch die Ahne
und das gilt allen und auch für den,
die – Jahre des Werdens, Jahre der Wahne − heute die Stadt im Tale sehn.
    </string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete Poem</string>
    <string name="action_edit">Edit</string>
    <string name="unsaved_changes_dialog_msg">Do you want to discard all changes to this poem?</string>
    <string name="discard">Yes!</string>
    <string name="keep_editing">Keep editing</string>
    <string name="deleting_warning_dialog_message">Do you really want to delete this poem?</string>
    <string name="confirm_deletion">Yes, delete!</string>
    <string name="abort_deletion">No, keep it!</string>
    <string name="action_syncWordpress">SyncDatabase</string>
    <string name="action_learn_mode">Learn Mode</string>
    <string name="endLearnModeMessage">Learn Mode Ended</string>
    <string name="startLearnModeMessage">Starting Learn Mode,Tap for new Line.</string>
    <string name="filter_by_poets_label">Poems by Author</string>
    <string name="ocr_activity_label">Scan Poem</string>
    <string name="action_search">Search for Authors and Names</string>

</resources>
