<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.stefantiess.poetrykeep.MainActivity">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_action"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"

        />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_dummy_data"
        android:orderInCategory="101"
        android:title="Add Dummy Poem"
        app:showAsAction="never" />
    <item
        android:id="@+id/sync_with_firebase"
        android:orderInCategory="102"
        android:title="Migrate Database"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_syncWordpress"
        android:orderInCategory="103"
        android:title="@string/action_syncWordpress"
        app:showAsAction="never" />
</menu>
